--- a/style.css
+++ b/style.css
@@ -1,2 +1,99 @@
 @import url('https://fonts.googleapis.com/css2?family=Baloo+Da+2:wght@400;500;600;700;800&family=Josefin+Slab:ital,wght@0,100;0,200;0,300;0,600;1,100;1,200;1,300;1,500;1,600&family=Mulish:ital,wght@0,200;0,300;0,400;0,500;0,600;1,200;1,300;1,400;1,500;1,600&display=swap');
 @import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css");
+* {
+    margin: 0;
+    padding: 0;
+}
+
+header {
+    width: 100%;
+    height: 100vh;
+    overflow: hidden;
+    position: relative;
+}
+
+.img-wrapper {
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    background-color: rgb(36, 36, 36);
+}
+
+.img-wrapper img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    opacity: 0.5;
+    animation: zoom 25s;
+}
+
+@keyframes zoom {
+    0% {
+        transform: scale(1);
+    }
+    100% {
+        transform: scale(1.3);
+    }
+}
+
+.banner {
+    position: absolute;
+    top: 30%;
+    left: 15%;
+}
+
+.banner h1 {
+    color: #ffffff;
+    font-size: 3.5rem;
+    font-family: "Baloo Da 2", serif;
+    font-weight: 200;
+    text-shadow: .3rem .4rem 2px rgb(0, 0, 4);
+    line-height: 3.5rem;
+    margin-bottom: 1rem;
+    opacity: 0;
+    animation: moveBanner 2s 0.1s forwards;
+}
+
+.banner p {
+    font-family: "Josefin Slab", serif;
+    color: #fff;
+    font-size: 2rem;
+    text-shadow: .3rem .4rem 2px rgb(0, 0, 4);
+    margin-bottom: 2rem;
+    opacity: 0;
+    animation: moveBanner 2s 0.5s forwards;
+}
+
+.banner button {
+    font-family: "Muli", serif;
+    color: #fff;
+    font-size: 0.8rem;
+    text-transform: uppercase;
+    letter-spacing: .2rem;
+    background: #DA4453;
+    background: -webkit-linear-gradient(to right, #89216B, #DA4453);
+    background: linear-gradient(to right, #89216B, #DA4453);
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+    padding-right: 2rem;
+    padding-left: 2rem;
+    border: none;
+    cursor: pointer;
+    opacity: 0;
+    animation: moveBanner 2s 1s forwards;
+}
+
+@keyframes moveBanner {
+    0% {
+        transform: translateY(15rem) rotateY(-20deg);
+    }
+    100% {
+        transform: translateY(0rem) rotateY(0);
+        opacity: 1;
+    }
+}
+
+.banner button:hover {
+    opacity: 0.8;
+    color: black;
+}
